--- a/index.html
+++ b/index.html
@@ -9,10 +9,37 @@
 </head>
 <body>
     <header>
-        <h1 id="title">freeCodeCamp Survey Form</h1>
+        <h1 id="title">American Songwriter</h1>
         <p id="description">Thank you for taking the time to help us improve the platform</p>
     </header>
     <form id="survey-form" action="">
+
+        <label id="name-label" for="name">Name</label> <br>
+        <input id="name" type="text" placeholder="Enter your name" required><br>
+        <label id="email-label" for="email">Email</label> <br>
+        <input id="email" type="email" placeholder="Enter your Email" required><br>
+        <label id="number-label" for="number">Number</label> <br>
+        <input id="number" type="number" min="14" placeholder="Age" required> <br>
+
+        <label for="services">Which option best describes your current role?</label> <br>
+        <select name="services" id="dropdown">
+            <option value="songwriter">Songwriter</option>
+            <option value="instrumentalist">Instrumentalist</option>
+            <option value="producer">Producer</option>
+            <option value="singer">Singer</option>
+        </select><br>
+
+        <label for="recommend">Would you recommend American Songwriter to a friend?</label>
+        <label for="definitely">
+        <br><input id="definitely" type="radio" name="recommend">Definitely
+        </label>
+        <label for="maybe">
+        <br><input id="maybe" type="radio" name="recommend">Maybe
+        </label>
+        <label for="not-sure">
+        <br><input id="not-sure" type="radio" name="recommend">Not sure
+        </label>
+
         
     </form>
 </body>
