--- a/index.html
+++ b/index.html
@@ -8,28 +8,34 @@
     <title>Survey Form</title>
 </head>
 <body>
+
     <header>
         <h1 id="title">American Songwriter</h1>
         <p id="description">Thank you for taking the time to help us improve the platform</p>
     </header>
-    <form id="survey-form" action="">
 
-        <label id="name-label" for="name">Name</label> <br>
+    <form id="survey-form" action="#">
+
+        <label id="name-label" for="name">Name <br>
         <input id="name" type="text" placeholder="Enter your name" required><br>
-        <label id="email-label" for="email">Email</label> <br>
+        </label>
+        <label id="email-label" for="email">Email <br>
         <input id="email" type="email" placeholder="Enter your Email" required><br>
-        <label id="number-label" for="number">Number</label> <br>
+        </label>
+        <label id="number-label" for="number">Number <br>
         <input id="number" type="number" min="14" placeholder="Age" required> <br>
+        </label>
 
-        <label for="services">Which option best describes your current role?</label> <br>
+        <label id="services-label" for="services">Which option best describes your current role? <br>
         <select name="services" id="dropdown">
             <option value="songwriter">Songwriter</option>
             <option value="instrumentalist">Instrumentalist</option>
             <option value="producer">Producer</option>
             <option value="singer">Singer</option>
         </select><br>
+        </label>
 
-        <label for="recommend">Would you recommend American Songwriter to a friend?</label>
+        <label id="recommend-label" for="recommend">Would you recommend American Songwriter to a friend?
         <label for="definitely">
         <br><input id="definitely" type="radio" name="recommend">Definitely
         </label>
@@ -39,7 +45,75 @@
         <label for="not-sure">
         <br><input id="not-sure" type="radio" name="recommend">Not sure
         </label>
+        <br>
+        </label>
 
+        <label id="features-label" for="features">What is your favorite feature of freeCodeCamp? <br>
+        <select name="features" id="dropdown2">
+            <option value="lyriccontest">Lyric Contest</option>
+            <option value="songcontest">Song Contest</option>
+            <option value="advertising">Advertising</option>
+            <option value="musicsubmissions">Music Submissions</option>
+        </select><br>
+        </label>
+
+        <label for="checkboxes">What would you like to see improved?
+        <label for="gear">
+            <br>
+        <input type="checkbox" name="checkboxes" id="gear" value="gear">
+        </label>Gear
+        <br>
+        <label for="dailydiscovery">
+        <input type="checkbox" name="checkboxes" id="dailydiscovery" value="dailydiscovery"> Daily Discovery
+        </label>
+        <br>
+        <label for="bestnewmusic">
+        <input type="checkbox" name="checkboxes" id="bestnewmusic" value="bestnewmusic"> Best New Music
+        </label>
+        <br>
+        <label for="interviews">
+        <input type="checkbox" name="checkboxes" id="interviews" value="interviews"> Interviews
+        </label>
+        <br>
+        <label for="albumreviews">
+        <input type="checkbox" name="checkboxes" id="albumreviews" value="albumreviews"> Album Reviews
+        </label>
+        <br>
+        <label for="coaching">
+        <input type="checkbox" name="checkboxes" id="coaching" value="coaching"> Coaching
+        </label>
+        <br>
+        <label for="writersroom">
+        <input type="checkbox" name="checkboxes" id="writersroom" value="writersroom"> Writers Room
+        </label>
+        <br>
+        <label for="legalcorner">
+        <input type="checkbox" name="checkboxes" id="legalcorner" value="legalcorner"> Legal Corner
+        </label>
+        <br>
+        <label for="lyriccritique">
+        <input type="checkbox" name="checkboxes" id="lyriccritique" value="lyriccritique"> Lyric Critique
+        </label>
+        <br>
+        <label for="youtubevideos">
+        <input type="checkbox" name="checkboxes" id="youtubevideos" value="youtubevideos"> YouTube Videos
+        </label>
+        <br>
+        <label for="wiki">
+        <input type="checkbox" name="checkboxes" id="wiki" value="wiki"> Wiki
+        </label>
+        <br>
+        <label for="forum">
+        <input type="checkbox" name="checkboxes" id="forum" value="forum"> Forum
+        </label>
+        <br>
+        </label>
+    
+        <label id="suggestionbox" for="name">Any comments or suggestions? <br>
+        <input id="comment-suggestion" type="text" placeholder="Enter your comment here">
+        </label>
+
+        <button id="submit-button" type="submit">Submit</button>
         
     </form>
 </body>
