changed it up a little bit just colors

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <h1 id="title">American Songwriter</h1>
+        <h1 id="title"><span>A</span>merican <span>S</span>ongwriter</h1>
         <p id="description">Thank you for taking the time to help us improve the platform</p>
     </header>
 
@@ -58,8 +58,8 @@
         </label>
 
         <label for="checkboxes">What would you like to see improved?
-        <label for="gear">
             <br>
+        <label for="gear">
         <input type="checkbox" name="checkboxes" id="gear" value="gear">
         </label>Gear
         <br>
@@ -112,7 +112,7 @@
         <label id="suggestionbox" for="name">Any comments or suggestions? <br>
         <input id="comment-suggestion" type="text" placeholder="Enter your comment here">
         </label>
-
+        <br>
         <button id="submit-button" type="submit">Submit</button>
         
     </form>
