--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Survey Form</title>
 </head>
 <body>
+   <div class="main-div">
     <header class="header">
         <h1 id="title"><span>A</span>merican <span>S</span>ongwriter</h1>
         <p id="description">Thank you for taking the time to help us improve the platform</p>
     </header>
-    
+
     <div class="container">
 
     <form id="survey-form">
@@ -223,5 +224,6 @@
         </div>
       </form>
     </div>
+</div> 
 </body>
 </html>
